# neorg-task-sync

./: .gitignore  .gitmodules  BUGS.md  Cargo.toml  IDEAS.md  LICENSE-APACHE  LICENSE-MIT  NOTES.norg  README.md  TODOs.md  flake.nix
after/queries/norg/: highlights.scm
src/: auth.rs  cfg.rs  error.rs  lib.rs  main.rs  opts.rs  parse.rs  progress_bar.rs  run.rs  select.rs  sync.rs  tasks.rs
