[package]
name = "neorg-task-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { version = "1.1.4", features = ["serde"] }
directories = "5.0.1"
figment = { version = "0.10.10", features = ["yaml", "json", "env"] }
google-tasks1 = "5.0.2"
hyper = { version = "0.14.26", features = ["http2", "client"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
once_cell = "1.17.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tokio = { version = "1.28.0", features = ["full"] }
yup-oauth2 = "8.3.0"
