[package]
name = "neorg-task-sync"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
camino = { version = "1.1.4", features = ["serde"] }
chrono = { version = "0.4.26", features = ["clock"] }
clap = { version = "4.3.9", features = ["derive", "unicode", "cargo"] }
clap-markdown = "0.1.3"
clap_complete = "4.3.1"
console = "0.15.7"
directories = "5.0.1"
figment = { version = "0.10.10", features = ["yaml", "json", "env"] }
google-tasks1 = "5.0.2"
hyper = { version = "0.14.26", features = ["http2", "client"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
indicatif = { version = "0.17.6", features = ["tokio", "improved_unicode"] }
log = "0.4.19"
once_cell = "1.17.1"
pretty_assertions = "1.4.0"
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.106"
serde_yaml = "0.9.21"
shadow-rs = "0.23.0"
simple_logger = { version = "4.2.0", features = ["threads"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tree-sitter = "0.20.10"
tree-sitter-norg = { path = "deps/tree-sitter-norg" }
yup-oauth2 = "8.3.0"

[build-dependencies]
shadow-rs = "0.23.0"
cc = "*"
