[package]
name = "neorg-task-sync"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
camino = { version = "1.1.6", features = ["serde"] }
chrono = { version = "0.4.31", features = ["clock"] }
clap = { version = "4.4.6", features = ["derive", "unicode", "cargo"] }
clap-markdown = "0.1.3"
clap_complete = "4.4.3"
console = "0.15.7"
directories = "5.0.1"
figment = { version = "0.10.11", features = ["yaml", "json", "env"] }
google-tasks1 = "5.0.3"
hyper = { version = "0.14.27", features = ["http2", "client"] }
hyper-rustls = { version = "0.24.1", features = ["http2"] }
indicatif = { version = "0.17.7", features = ["tokio", "improved_unicode"] }
log = "0.4.20"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
shadow-rs = "1"
simple_logger = { version = "4.2.0", features = ["threads"] }
skim = "0.10.4"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tree-sitter = "0.20.10"
tree-sitter-norg = { git = "https://github.com/nvim-neorg/tree-sitter-norg", tag = "v0.2.4" }
yup-oauth2 = "8.3.0"

[build-dependencies]
shadow-rs = "1"
cc = "*"
